private_server/guard/CELL-32/Q-21/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-32/Q-21/32-21.py", line 4
    
          ^
SyntaxError: unexpected EOF while parsing
